bug 355360 - Fix Unifinder min-height so scrollbar is drawn correctly. Patch by Simon Paquet <bugzilla@babylonsounds.com>, r=lilmatt, ui-r=mvl

--- a/calendar/sunbird/themes/pinstripe/sunbird/calendar.css
+++ b/calendar/sunbird/themes/pinstripe/sunbird/calendar.css
@@ -741,7 +741,7 @@ listitem[selected="true"] > .calendar-list-item-class
 /* workaround to avoid Window Flick */
 #unifinder-search-results-listbox
 {
-   min-height : 40px ;
+   min-height : 92px ;
 }
 
 /*--------------------------------------------------------------------
