--- a/calendar/sunbird/themes/winstripe/sunbird/calendar.css
+++ b/calendar/sunbird/themes/winstripe/sunbird/calendar.css
@@ -885,7 +885,7 @@ listitem[selected="true"] > .calendar-list-item-class
 /* workaround to avoid Window Flick */
 #unifinder-search-results-listbox
 {
-   min-height : 40px ;
+   min-height : 76px ;
 }
 
 /*--------------------------------------------------------------------
